--- a/ShoppingBuddyWebApplication/Views/Product/Create.cshtml
+++ b/ShoppingBuddyWebApplication/Views/Product/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model ShoppingBuddyWebApplication.Models.ShoppingList
+﻿@model ShoppingBuddyWebApplication.Models.Product
 
 @{
     ViewData["Title"] = "Create";
@@ -6,16 +6,16 @@
 
 <h1>Create</h1>
 
-<h4>ShoppingList</h4>
+<h4>Products</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Product" class="control-label"></label>
-                <input asp-for="Product" class="form-control" />
-                <span asp-validation-for="Product" class="text-danger"></span>
+                <label asp-for="Name" class="control-label"></label>
+                <input asp-for="Name" class="form-control" />
+                <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
@@ -25,7 +25,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Add new product">Back to List</a>
 </div>
 
 @section Scripts {
