--- a/ShoppingBuddyWebApplication/Views/Product/Delete.cshtml
+++ b/ShoppingBuddyWebApplication/Views/Product/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model ShoppingBuddyWebApplication.Models.ShoppingList
+﻿@model ShoppingBuddyWebApplication.Models.Product
 
 @{
     ViewData["Title"] = "Delete";
@@ -8,14 +8,14 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>ShoppingList</h4>
+    <h4>Products</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Product)
+            @Html.DisplayNameFor(model => model.Name)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Product)
+            @Html.DisplayFor(model => model.Name)
         </dd>
     </dl>
     
