--- a/ShoppingBuddyWebApplication/Views/Product/Details.cshtml
+++ b/ShoppingBuddyWebApplication/Views/Product/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model ShoppingBuddyWebApplication.Models.ShoppingList
+﻿@model ShoppingBuddyWebApplication.Models.Product
 
 @{
     ViewData["Title"] = "Details";
@@ -7,14 +7,14 @@
 <h1>Details</h1>
 
 <div>
-    <h4>ShoppingList</h4>
+    <h4>Products</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Product)
+            @Html.DisplayNameFor(model => model.Name)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Product)
+            @Html.DisplayFor(model => model.Name)
         </dd>
     </dl>
 </div>
