--- a/ShoppingBuddyWebApplication/Views/Product/Index.cshtml
+++ b/ShoppingBuddyWebApplication/Views/Product/Index.cshtml
@@ -1,10 +1,10 @@
-﻿@model IEnumerable<ShoppingBuddyWebApplication.Models.ShoppingList>
+﻿@model IEnumerable<ShoppingBuddyWebApplication.Models.Product>
 
 @{
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>All products list</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -13,7 +13,7 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Product)
+                @Html.DisplayNameFor(model => model.Name)
             </th>
             <th></th>
         </tr>
@@ -22,7 +22,7 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Product)
+                @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
