--- a/ShoppingBuddyWebApplication/Views/Home/Index.cshtml
+++ b/ShoppingBuddyWebApplication/Views/Home/Index.cshtml
@@ -1,8 +1,43 @@
-﻿@{
+﻿@using Microsoft.AspNetCore.Identity
+@inject SignInManager<IdentityUser> SignInManager
+@{
     ViewData["Title"] = "Home Page";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Hello, I'm your shopping buddy.</h1>
+    <h1 class="display-4">Hello @User.Identity.Name, I'm your shopping buddy.</h1>
     <p>I will make your shopping much easier!</p>
+</div>
+<div class="container py-3">
+<main>
+    @if (SignInManager.IsSignedIn(User)){
+            <form asp-action="Index">
+                <div class="row row-cols-1 row-cols-md-3 mb-3">
+                    @foreach (var shoppingItem in ViewBag.ShoppingList)
+                    {
+                        <div class="col">
+                            <div class="card mb-4 rounded-3 shadow-sm">
+                                <div class="card-header py-3"><h4 class="my-0 fw-normal">@shoppingItem.Name</h4></div>
+                                <div class="card-body">
+                                    <ul>
+                                        @foreach (var product in shoppingItem.ProductShoppingLists)
+                                        {
+                                            <li>
+                                                <input type="checkbox" name="@product.Product.Id" value="@product.Product.Name" @(product.Product.IsChecked ? "checked" : "") />
+                                                <label for="@product.Product.Id">@product.Product.Name</label>
+                                            </li>
+                                        }
+                                    </ul>
+                                    <input type="submit" value="Update" class="w-100 btn btn-lg btn-primary" />
+                                </div>
+
+                            </div>
+
+                        </div>
+
+                    }
+                </div>
+            </form>
+    }        
+</main>
 </div>
