--- a/ShoppingBuddyWebApplication/Views/ShoppingLists/Index.cshtml
+++ b/ShoppingBuddyWebApplication/Views/ShoppingLists/Index.cshtml
@@ -8,7 +8,7 @@
 <h1>Shopping Lists</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a class="create-new-link" asp-action="Create">Create New <i class="fa fa-plus"></i></a>
 </p>
 <table class="table">
     <thead>
@@ -43,9 +43,9 @@
                 @Html.DisplayFor(modelItem => item.User.UserName)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                    <a asp-action="Edit" asp-route-id="@item.Id"><i class="fas fa-edit"></i></a> |
+                    <a asp-action="Details" asp-route-id="@item.Id"><i class="fas fa-eye"></i></a> |
+                    <a asp-action="Delete" asp-route-id="@item.Id"><i class="fas fa-trash-alt"></i></a>
             </td>
         </tr>
 }
