--- a/ShoppingBuddyWebApplication/wwwroot/css/site.css
+++ b/ShoppingBuddyWebApplication/wwwroot/css/site.css
@@ -16,12 +16,22 @@ html {
 body {
   margin-bottom: 60px;
 }
+body {
+    padding-top: 140px; /* Change this value to the height of your navbar */
+}
 
 
 body {
-    background-image: linear-gradient(180deg, #eee, #fff 100px, #fff);
+    background: rgb(245,248,236);
+    background: linear-gradient(176deg, rgba(245,248,236,0.43463322829131656) 7%, rgba(163,194,143,0.2889749649859944) 100%);
+}
+i.fas {
+    color: #779b76;
 }
 
+.create-new-link {
+    color: #779b76;
+} 
 .container {
     max-width: 960px;
 }
@@ -58,6 +68,19 @@ body {
     fill: currentColor;
 }
 
+.navbar {
+    background-color: rgb(246,247,241);
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+    padding-top: .5rem;
+    padding-bottom: .5rem;
+}
+
 .nav-scroller {
     position: relative;
     z-index: 2;
@@ -75,3 +98,107 @@ body {
         white-space: nowrap;
         -webkit-overflow-scrolling: touch;
     }
+
+
+.btn {
+    color: #fff !important;
+    padding-left: 0.75rem;
+    padding-right: 0.75rem;
+    padding-top: 0.375rem;
+    padding-bottom: 0.375rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+}
+
+.btn-outline-primary {
+    color: #779b76;
+    border-color: #779b76;
+}
+
+    .btn-outline-primary:hover {
+        color: #fff !important;
+        background-color: #9ec59d;
+        border-color: #9ec59d;
+    }
+
+.btn-outline-primary:focus {
+    box-shadow: 0 0 0 0.2rem rgba(13, 110, 253, 0.5);
+}
+
+.btn-outline-primary.disabled,
+.btn-outline-primary:disabled {
+    color: #779b76;
+    background-color: transparent;
+    border-color: #779b76;
+}
+
+.btn-outline-primary.active,
+.btn-outline-primary:active {
+    color: #fff;
+    background-color: #779b76;
+    border-color: #779b76;
+    box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+}
+
+.btn-primary {
+    color: #fff !important;
+    background-color: #9ec59d;
+    border-color: #9ec59d;
+}
+
+        .btn-primary:hover {
+            color: #fff !important;
+            background-color: #779b76;
+            border-color: #779b76;
+        }
+
+    .btn-primary:focus {
+        box-shadow: 0 0 0 0.2rem rgba(49, 132, 253, 0.5);
+    }
+
+    .btn-primary.disabled,
+    .btn-primary:disabled {
+        color: #fff !important;
+        background-color: #9ec59d;
+        border-color: #9ec59d;
+    }
+
+    .btn-primary.active,
+    .btn-primary:active {
+        color: #fff !important;
+        background-color: #60845f;
+        border-color: #60845f;
+        box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+    }
+
+.btn-outline-primary {
+    color: #779b76;
+    border-color: #779b76;
+}
+
+    .btn-outline-primary:hover {
+        color: #fff !important;
+        background-color: #9ec59d;
+        border-color: #9ec59d;
+    }
+
+    .btn-outline-primary:focus {
+        box-shadow: 0 0 0 0.2rem rgba(13, 110, 253, 0.5);
+    }
+
+    .btn-outline-primary.disabled,
+    .btn-outline-primary:disabled {
+        color: #779b76;
+        background-color: transparent;
+        border-color: #779b76;
+    }
+
+    .btn-outline-primary.active,
+    .btn-outline-primary:active {
+        color: #fff !important;
+        background-color: #779b76;
+        border-color: #779b76;
+        box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+    }
+
