--- a/ShoppingBuddyWebApplication/Views/Shared/_Layout.cshtml
+++ b/ShoppingBuddyWebApplication/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="Index">Products</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Favorites" asp-action="Index">Favorites</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Favorites" asp-action="Index">Favourites</a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
@@ -56,5 +56,7 @@
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-beta.1/dist/js/select2.min.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
+
+
 </body>
 </html>
